Fixed layout issues in rekrutacja/sekretariat

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -363,8 +363,24 @@ p {
 .wniosek-container {
   margin-top: 10rem;
 }
-.wniosek-container .btn {
-  white-space: wrap;
+.wniosek-container .btn--pdf {
+  display: none;
+}
+@media screen and (width < 720px) {
+  .wniosek-container .btn {
+    display: none;
+  }
+  .wniosek-container .btn--pdf {
+    display: block;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 400;
+  }
+  .wniosek-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 @media screen and (min-width: 1024px) {
   .recruitment-block__list li {
@@ -528,6 +544,7 @@ p {
 .sekretariat-image {
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 .sekretariat-image img {
   border-radius: 20px;
